--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 .attribution { 
     font-size: 11px; 
     text-align: center; 
@@ -11,6 +7,20 @@
      color: hsl(228, 45%, 44%);
 }
 
-#perfume-image {
-    background-image: url(images/image-product-desktop.jpg);
+#perfume-product {
+    display: flex;
+    flex-direction: row;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 400px;
+
+    font-size: 14px;
+}
+
+img {
+    width: 100%;
 }
